[project]
name = "beed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.1"
dependencies = [
    "imblearn>=0.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pingouin>=0.6.0",
    "seaborn>=0.13.2",
    "xgboost>=3.2.0",
]
